Added individual notes. Finished spectral graph theory notes.

--- a/main.sty
+++ b/main.sty
@@ -317,6 +317,7 @@ overlay={\begin{tcbclipinterior}
 \newcommand{\boundop}[1]{\ensuremath{B\left(#1\right)}}
 
 \DeclareMathOperator{\spanset}{span}
+\DeclareMathOperator{\spec}{spec}
 
 % Todo stuff
 \usepackage[obeyFinal]{todonotes}
