--- a/tex/preliminary-on-linear-algebra.tex
+++ b/tex/preliminary-on-linear-algebra.tex
@@ -311,8 +311,10 @@ Thus, $\dim \matrices_{n\times m} = nm$ and $\dim L(\vecspace{V}, \vecspace{W}) 
     \[\begin{pmatrix}v_1\\v_2\\\vdots\\v_n\end{pmatrix} + \begin{pmatrix}u_1\\u_2\\\vdots\\u_n\end{pmatrix} = \begin{pmatrix}v_1 + u_1\\v_2 + u_2\\\vdots\\v_n + u_2\end{pmatrix}\]
 \end{definition}
 
-For example, $\complexnums^2 \directsum \complexnums^4 \directsum \complexnums^3 = \complexnums^{2+4+3} = \complexnums^9$, e.g.
-\[\begin{pmatrix}0\\1\end{pmatrix}\directsum\begin{pmatrix}2\\3\\1\\2\\\end{pmatrix}\directsum\begin{pmatrix}-5\\6\\7\end{pmatrix} = \begin{pmatrix}\begin{pmatrix}1\\0\end{pmatrix}\\\begin{pmatrix}2\\3\\1\\2\\\end{pmatrix}\\\begin{pmatrix}-5\\6\\7\end{pmatrix}\end{pmatrix} = \begin{pmatrix}1\\0\\2\\3\\1\\2\\-5\\6\\7\end{pmatrix}\]
+\begin{example}
+    $\complexnums^2 \directsum \complexnums^4 \directsum \complexnums^3 = \complexnums^{2+4+3} = \complexnums^9$, e.g.
+    \[\begin{pmatrix}0\\1\end{pmatrix}\directsum\begin{pmatrix}2\\3\\1\\2\\\end{pmatrix}\directsum\begin{pmatrix}-5\\6\\7\end{pmatrix} = \begin{pmatrix}\begin{pmatrix}1\\0\end{pmatrix}\\\begin{pmatrix}2\\3\\1\\2\\\end{pmatrix}\\\begin{pmatrix}-5\\6\\7\end{pmatrix}\end{pmatrix} = \begin{pmatrix}1\\0\\2\\3\\1\\2\\-5\\6\\7\end{pmatrix}\]
+\end{example}
 
 \begin{definition}[Inner Product of Direct Sum]
     We define the inner product on $\vecspace{V}_1 \directsum \vecspace{V}_2 \directsum \dots \directsum \vecspace{V}_n$ as
