--- a/main.tex
+++ b/main.tex
@@ -29,4 +29,5 @@
 \include{tex/lossless-compression}
 \include{tex/preliminary-on-linear-algebra}
 \include{tex/spectral-theorem}
+\include{tex/postulates-of-qm}
 \end{document}
