Quantum Postulates, started density operator

--- a/main.sty
+++ b/main.sty
@@ -315,9 +315,14 @@ overlay={\begin{tcbclipinterior}
 \newcommand{\optlength}[1]{\ensuremath{\ell^*\left(#1\right)}}
 \newcommand{\linop}[2]{\ensuremath{L\left(#1,#2\right)}}
 \newcommand{\boundop}[1]{\ensuremath{B\left(#1\right)}}
+\newcommand{\bra}[1]{\ensuremath{\left\langle #1\right|}}
+\newcommand{\ket}[1]{\ensuremath{\left|#1\right\rangle}}
+\newcommand{\bracket}[2]{\ensuremath{\left\langle \left.#1\right|#2\right\rangle}}
+\newcommand{\planck}{\hbar}
 
 \DeclareMathOperator{\spanset}{span}
 \DeclareMathOperator{\spec}{spec}
+\DeclareMathOperator{\trace}{tr}
 
 % Todo stuff
 \usepackage[obeyFinal]{todonotes}
