--- a/main.tex
+++ b/main.tex
@@ -30,4 +30,5 @@
 \include{tex/preliminary-on-linear-algebra}
 \include{tex/spectral-theorem}
 \include{tex/postulates-of-qm}
+\include{tex/density-operator}
 \end{document}
